--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
     <div class="header">
         <image id="logo" src="images/naturecompanion.svg" />
         <image id="title" src="images/title.svg" />
-        <a href="/"><image id="menu" src="images/menu.svg" /></a>
+        <a href="/"><image id="help" src="images/help.svg" /></a>
         <a href="/"><image id="search" src="images/search.svg" /></a>
     </div>
     <div class="container">
