--- a/static/nature.css
+++ b/static/nature.css
@@ -105,19 +105,19 @@ h1 {
     float: right;
     max-width: 3vw;
     margin-left: 1vw;
-    margin-right: 2vw;
+    margin-right: 1vw;
     margin-top: 2vw;
 }
 
-#menu {
+#help {
     float: right;
-    max-width: 3vw;
+    max-width: 1.8vw;
     margin-left: 1vw;
     margin-right: 2vw;
-    margin-top: 2.4vw;
+    margin-top: 1.8vw;
 }
 
-#search:hover, #menu:hover {
+#search:hover, #help:hover {
     filter: invert();
 }
 
