--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,39 +7,41 @@
 
 <body class="photobgnd">
     <div class="header">
-        <image id="logo" src="images/naturecompanion.svg" />
-        <image id="title" src="images/title.svg" />
         <a href="/"><image id="help" src="images/help.svg" /></a>
         <a href="/"><image id="search" src="images/search.svg" /></a>
+        <div class="header-left">
+            <image id="logo" src="images/naturecompanion.svg" />
+            <image id="title" src="images/title.svg" />     
+        </div>
     </div>
     <div class="container">
-        <div class="item">
+        <div class="group">
             <a href="birds.html">
                 <image class="icon" src="images/birds.svg" />
                 <div class="label">Birds</div>
             </a>
         </div>
-        <div class="item">
+        <div class="group">
             <image class="icon" src="images/insects.svg" />
             <div class="label">Insects</div>
         </div>
-        <div class="item">
+        <div class="group">
             <image class="icon" src="images/plants.svg" />
             <div class="label">Plants</div>
         </div>
-        <div class="item">
+        <div class="group">
             <image class="icon" src="images/herptiles.svg" />
             <div class="label">Reptiles&nbsp;&amp;<br />Amphibians</div>
         </div>
-        <div class="item">
+        <div class="group">
             <image class="icon" src="images/trees.svg" />
             <div class="label">Trees&nbsp;&amp;<br />Shrubs</div>
         </div>
-        <div class="item">
+        <div class="group">
             <image class="icon" src="images/animals.svg" />
             <div class="label">Animals</div>
         </div>
-        <!-- <div class="item">
+        <!-- <div class="group">
             <image class="icon" src="images/location.svg" />
             <div class="label">Location</div>
         </div> -->
