--- a/static/nature.css
+++ b/static/nature.css
@@ -1,8 +1,22 @@
+/*
+Responsive design.
+Should work from small phones to large monitors,
+both portrait and landscape.
+One of the techniques is to scale by the smaller side.
+i.e. when portrait scale by width, when landscape scale by height.
+Also using media queries to implement min/max for scalable font sizes.
+NOTE: These techniques result in duplication and interrelated sizes,
+changes may have to be coordinated in multiple places.
+*/
+
 html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: #DBDBDB;
 }
+
+/* home page ------------------------------- */
 
 .photobgnd {
     background-image: url("images/background.jpg");
@@ -11,32 +25,32 @@ html, body {
     background-size: cover;
 }
 
-.bgnd {
-    background-color: #DBDBDB;
-}
-
-/* ----------------------------------------- */
-
 .header {
     background: rgba(0, 0, 0, .3);
-    margin-bottom: 3vh;
-    box-shadow: 0 0 10px 15px rgba(0, 0, 0, .3);
-    -webkit-box-shadow: 0 0 10px 15px rgba(0, 0, 0, .3);
 }
 
-#logo {
-    max-width: 12vw;
-    max-height: 12vh;
-    margin: 15px 15px 0;
+.header-left {
+    display: flex;
+    align-items: center;
 }
-
 #title {
-    max-width: 65vw;
-    max-height: 12vh;
-    margin-right: 10px;
+    max-width: 50vw;
+    flex: 1 1 auto;
 }
 
-/* ----------------------------------------- */
+#search {
+    float: right;
+    min-width: 20px;
+}
+
+#help {
+    float: right;
+    min-width: 12px;
+}
+
+#search:hover, #help:hover {
+    filter: invert();
+}
 
 .container {
     display: flex;
@@ -46,7 +60,7 @@ html, body {
     margin: 0 auto;
 }
 
-.item {
+.group {
     flex: 0 1 auto;
     width: 35%; /* two across */
     margin-bottom: 3vh;
@@ -60,11 +74,128 @@ html, body {
 .label {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2.5vh;
-    width: 100%;
     text-align: center;
-    margin-top: .3em;
-    margin-right: 1em;
+    font-size: 20px;
+    width: 100%;
+    margin-top: .2em;
+}
+@media (min-width: 400px) and (orientation: portrait) {
+    .label {
+        font-size: 5vw; /* 400px * 5% = 20px */
+    }
+}
+@media (min-width: 800px) and (orientation: portrait) {
+    .label {
+        font-size: 40px; /* max @ 800px * 5% */
+    }
+}
+@media (min-height: 400px) and (orientation: landscape) {
+    .label {
+        font-size: 5vh; /* 400px * 5% = 20px */
+    }
+}
+@media (min-height: 800px) and (orientation: landscape) {
+    .label {
+        font-size: 40px; /* max @ 800px * 5% */
+    }
+}
+
+.group a {
+    color: black;
+    text-decoration: inherit;
+}
+
+.group a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+
+/* larger than phone */
+@media (min-width: 550px) {
+    .group {
+        width: 26%; /* three across */
+    }
+}
+
+@media (orientation: portrait) {
+    .header {
+        box-shadow: 0 0 1.5vw 1.5vw rgba(0, 0, 0, .3);
+        -webkit-box-shadow: 0 0 1.5vw 1.5vw rgba(0, 0, 0, .3);
+        margin-bottom: 3vw;
+    }
+    #logo {
+        width: 12vw;
+        height: 12vw;
+        margin-top: 2vw;
+        margin-left: 2vw;
+        margin-right: 2vw;
+    }
+    #title {
+        margin-top: 2vw;
+    }
+    #search {
+        width: 4vw;
+        margin-top: 2.5vw;
+        margin-right: 3vw;
+    }
+    #help {
+        width: 2.5vw;
+        margin-top: 2.35vw;
+        margin-right: 3vw;
+    }
+}
+@media (orientation: landscape) {
+    .header {
+        box-shadow: 0 0 1.5vh 1.5vh rgba(0, 0, 0, .3);
+        -webkit-box-shadow: 0 0 1.5vh 1.5vh rgba(0, 0, 0, .3);
+        margin-bottom: 3vh;
+    }
+    #logo {
+        width: 12vh;
+        height: 12vh;
+        margin-top: 2vh;
+        margin-left: 2vh;
+        margin-right: 2vh;
+        }
+    #title {
+        margin-top: 2vh;
+        max-height: 12vh;
+    }
+    #search {
+        width: 4vh;
+        margin-top: 2.5vh;
+        margin-right: 3vh;
+    }
+    #help {
+        width: 2.5vh;
+        margin-top: 2.35vh;
+        margin-right: 3vh;
+    }
+}
+
+/* group pages, e.g. Birds --------------------------------------- */
+
+#small-logo {
+    vertical-align: bottom;
+    max-width: 70px;
+}
+
+h1 {
+    margin: 0;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FFD25E;
+}
+
+.list {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 2vw;
+}
+
+.item {
+    max-width: 200px;
+    margin: 10px;
 }
 
 .item a {
@@ -77,90 +208,90 @@ html, body {
     text-decoration: underline;
 }
 
-/* ----------------------------------------- */
-
-.category-header {
-    /* display: flex; */
-    /* align-items: flex-end; */
-    margin-bottom: 3vh;
-}
-
-#small-logo {
-    max-width: 6vw;
-    margin-top: 1vw;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    vertical-align: bottom;
-}
-
-h1 {
-    margin: 0;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 5vw;
-    color: #FFD25E;
-}
-
-#search {
-    float: right;
-    max-width: 3vw;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    margin-top: 2vw;
-}
-
-#help {
-    float: right;
-    max-width: 1.8vw;
-    margin-left: 1vw;
-    margin-right: 2vw;
-    margin-top: 1.8vw;
-}
-
-#search:hover, #help:hover {
-    filter: invert();
-}
-
-.list {
-    display: flex;
-    flex-flow: row wrap;
-    margin: 2vw;
-}
-
-/* ----------------------------------------- */
-
-.thumbnail {
+img.small {
     display: block;
-    max-width: 30vw;
-    max-height: 28vh;
+    max-width: 200px;
     border-radius: 20px;
 }
-
-/* ----------------------------------------- */
-
-/* larger than phone */
-@media only screen and (min-width: 550px) {
-    .item {
-        width: 26%; /* three across */
-    }
-}
-
-@media screen and (orientation: landscape) {
-    .header {
-        margin-bottom: 3vh;
-    }
+@media (orientation: portrait) {
     #small-logo {
-        max-width: 5vw;
+        width: 10vw;
+        margin-top: 1vw;
+        margin-left: 1vw;
+        margin-right: 2vw;
     }
     h1 {
-        font-size: 4vw;
+        font-size: 8vw;
     }
-    .label {
-        font-size: 4.5vh;
+    .header-left span {
+        margin-top: 1vw;
+    }
+    img.small {
+        width: 40vw; /* reaches max of 200 at width 500 */
+    }
+    .name {
+        width: 40vw;
+    }
+}
+@media (min-width: 600px) and (orientation: portrait) {
+    h1 {
+        font-size: 48px;
+    }
+}
+@media (orientation: landscape) {
+    #small-logo {
+        width: 10vh;
+        margin-top: 1vh;
+        margin-left: 1vh;
+        margin-right: 2vh;
+    }
+    h1 {
+        font-size: 8vh;
+    }
+    .header-left span {
+        margin-top: 1vh;
+    }
+    img.small {
+        width: 40vh; /* reaches max of 200 at height 500 */
+    }
+    .name {
+        width: 40vh;
+    }
+}
+@media (min-height: 600px) and (orientation: landscape) {
+    h1 {
+        font-size: 48px;
     }
 }
 
-/* ----------------------------------------- */
+.name {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-top: 10px;
+    max-width: 200px; /* same as .small */
+}
+@media (orientation: portrait) {
+    .name {
+        font-size: 3.6vw; 
+    }
+}
+@media (min-width: 500px) and (orientation: portrait) {
+    .name {
+        font-size: 18px;
+    }
+}
+@media (orientation: landscape) {
+    .name {
+        font-size: 3.6vh;
+    }
+}
+@media (min-height: 500px) and (orientation: landscape) {
+    .name {
+        font-size: 18px;
+    }
+}
+
+/* Single item page ---------------------------------------------- */
 
 .single {
     display: flex;
@@ -171,10 +302,10 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.full {
+img.large {
     display: block;
-    max-width: 800px;
-    max-height: 800px;
+    max-width: 1024px;
+    max-height: 1024px;
     border-radius: 20px;
     margin-top: 0;
 }
@@ -194,8 +325,8 @@ h1 {
     margin-left: 1vw;
 }
 
-@media screen and (orientation: landscape) {
-    .full {
+@media (orientation: landscape) {
+    img.large {
         width: 45vw;
         height: 45vw;
         max-height: 77vh;
@@ -206,19 +337,16 @@ h1 {
         width: 45vw;
     }
 }
-
-@media screen and (orientation: portrait) {
-    .full {
+@media (orientation: portrait) {
+    img.large {
         width: 50vh;
         height: 50vh;
         max-height: 91vw;
         max-width: 91vw;
     }
-    .attribution {
-        margin-bottom: 2vh;
-    }
     .content {
         width: 95vw;
+        margin-top: 2vw;
     }
 }
 
