fix background on home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html>
+<html class="photobgnd">
 
 <head lang="en">
     {{ partial "head.html" . }}
 </head>
 
-<body class="photobgnd">
+<body>
     <div class="header">
         <a href="/"><image id="help" src="images/help.svg" /></a>
         <a href="/"><image id="search" src="images/search.svg" /></a>
