--- a/layouts/_default/birds.html
+++ b/layouts/_default/birds.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <h1>
-            <a href="/"><image id="help" src="images/help.svg" /></a>
+            <a href="/help.html"><image id="help" src="images/help.svg" /></a>
             <a href="/"><image id="search" src="images/search.svg" /></a>
             <div class="header-left">
                 <a href="/">
