--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="header">
-        <a href="/"><image id="help" src="images/help.svg" /></a>
+        <a href="/help.html"><image id="help" src="images/help.svg" /></a>
         <a href="/"><image id="search" src="images/search.svg" /></a>
         <div class="header-left">
             <image id="logo" src="images/naturecompanion.svg" />
