start on western canada map

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,6 +29,7 @@
         </div>
         <div class="content">
         {{ .Content }}
+        {{ partial "map.svg" . }}
         </div>
     </div>
 </body>
