--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <h1>
-            <a href="/birds.html"><image id="close" src="/images/close.svg" /></a>
+            <a href="/{{ .Section }}.html"><image id="close" src="/images/close.svg" /></a>
            <div class="header-left">
                 <a href="/"><image id="small-logo" src="/images/naturecompanion.svg" /></a>
                 <span>{{ .Params.name }}</span>
