--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,8 +30,10 @@
             <div class="label">Plants</div>
         </div>
         <div class="group">
-            <image class="icon" src="images/herptiles.svg" />
-            <div class="label">Reptiles&nbsp;&amp;<br />Amphibians</div>
+            <a href="herps.html">
+                <image class="icon" src="images/herps.svg" />
+                <div class="label">Reptiles&nbsp;&amp;<br />Amphibians</div>
+            </a>
         </div>
         <div class="group">
             <image class="icon" src="images/trees.svg" />
