--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,8 +22,10 @@
             </a>
         </div>
         <div class="group">
-            <image class="icon" src="images/insects.svg" />
-            <div class="label">Insects</div>
+            <a href="insects.html">
+                <image class="icon" src="images/insects.svg" />
+                <div class="label">Insects</div>
+            </a>
         </div>
         <div class="group">
             <image class="icon" src="images/plants.svg" />
