--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,11 +7,13 @@
 
 <body>
     <div class="header">
-        <a href="/help.html"><image id="help" src="images/help.svg" /></a>
-        <a href="/"><image id="search" src="images/search.svg" /></a>
+        <a href="/help.html">
+            <image id="help" src="images/help.svg" /></a>
+        <a href="/search.html">
+            <image id="search" src="images/search.svg" /></a>
         <div class="header-left">
             <image id="logo" src="images/naturecompanion.svg" />
-            <image id="title" src="images/title.svg" />     
+            <image id="title" src="images/title.svg" />
         </div>
     </div>
     <div class="container">
