--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <h1>
-            <image id="close" src="/images/close.svg" onclick="goBack()" />
+            <image id="close" src="/images/close.svg" onclick="history.back()" />
             <div class="header-left">
                 <a href="/"><image id="small-logo" src="/images/naturecompanion.svg" /></a>
                 <span>{{ .Params.name }}</span>
@@ -130,9 +130,6 @@
         </div>
     </div>
     <script>
-        function goBack() {
-            window.history.back();
-        }
         var clicked = null;
         var timer;
         function toggle(id) {
