--- a/static/nature.css
+++ b/static/nature.css
@@ -2,7 +2,7 @@
 Responsive design.
 Should work from small phones to large monitors,
 both portrait and landscape.
-One of the techniques is to scale by the smaller side.
+vmin is used to scale by the smaller side.
 i.e. when portrait scale by width, when landscape scale by height.
 Also using media queries to implement min/max for scalable font sizes.
 NOTE: These techniques result in duplication and interrelated sizes,
@@ -28,6 +28,17 @@ html, body {
 
 .header {
     background: rgba(0, 0, 0, .3);
+    box-shadow: 0 0 1.5vmin 1.5vmin rgba(0, 0, 0, .3);
+    -webkit-box-shadow: 0 0 1.5vmin 1.5vmin rgba(0, 0, 0, .3);
+    margin-bottom: 3vmin;
+}
+
+#logo {
+    width: 12vmin;
+    height: 12vmin;
+    margin-top: 2vmin;
+    margin-left: 2vmin;
+    margin-right: 2vmin;
 }
 
 .header-left {
@@ -36,11 +47,16 @@ html, body {
 }
 
 #title {
+    margin-top: 2vmin;
+    max-height: 12vmin;
     max-width: 50vw;
     flex: 1 1 auto;
 }
 
 #small-title {
+    /* used on help */
+    margin-top: 2vmin;
+    max-height: 8vmin;
     max-width: 50vw;
     flex: 1 1 auto;
 }
@@ -49,12 +65,18 @@ html, body {
     float: right;
     min-height: 30px;
     max-height: 45px;
+    height: 4vmin;
+    margin-top: 2.5vmin;
+    margin-right: 3vmin;
 }
 
 #help {
     float: right;
     min-height: 30px;
     max-height: 45px;
+    height: 4.4vmin;
+    margin-top: 2.35vmin;
+    margin-right: 3vmin;
 }
 
 #search:hover, #help:hover {
@@ -76,6 +98,24 @@ html, body {
     margin-bottom: 3vh;
 }
 
+.group a {
+    color: black;
+    text-decoration: inherit;
+}
+
+.group a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+
+@media (min-width: 550px) {
+    /* larger than phone */
+    .group {
+        width: 26%;
+        /* three across */
+    }
+}
+
 .icon {
     display: block;
     max-height: 28vh;
@@ -90,9 +130,9 @@ html, body {
     margin-top: .2em;
 }
 
-@media (min-width: 400px) and (orientation: portrait) {
+@media (min-width: 400px) {
     .label {
-        font-size: 5vw;
+        font-size: 5vmin;
         /* 400px * 5% = 20px */
     }
 }
@@ -104,100 +144,10 @@ html, body {
     }
 }
 
-@media (min-height: 400px) and (orientation: landscape) {
-    .label {
-        font-size: 5vh;
-        /* 400px * 5% = 20px */
-    }
-}
-
 @media (min-height: 800px) and (orientation: landscape) {
     .label {
         font-size: 40px;
         /* max @ 800px * 5% */
-    }
-}
-
-.group a {
-    color: black;
-    text-decoration: inherit;
-}
-
-.group a:hover {
-    color: blue;
-    text-decoration: underline;
-}
-
-/* larger than phone */
-
-@media (min-width: 550px) {
-    .group {
-        width: 26%;
-        /* three across */
-    }
-}
-
-@media (orientation: portrait) {
-    .header {
-        box-shadow: 0 0 1.5vw 1.5vw rgba(0, 0, 0, .3);
-        -webkit-box-shadow: 0 0 1.5vw 1.5vw rgba(0, 0, 0, .3);
-        margin-bottom: 3vw;
-    }
-    #logo {
-        width: 12vw;
-        height: 12vw;
-        margin-top: 2vw;
-        margin-left: 2vw;
-        margin-right: 2vw;
-    }
-    #title {
-        margin-top: 2vw;
-    }
-    #small-title {
-        margin-top: 2vw;
-    }
-    #search {
-        height: 4vw;
-        margin-top: 2.5vw;
-        margin-right: 3vw;
-    }
-    #help {
-        height: 4.4vw;
-        margin-top: 2.3vw;
-        margin-right: 3vw;
-    }
-}
-
-@media (orientation: landscape) {
-    .header {
-        box-shadow: 0 0 1.5vh 1.5vh rgba(0, 0, 0, .3);
-        -webkit-box-shadow: 0 0 1.5vh 1.5vh rgba(0, 0, 0, .3);
-        margin-bottom: 3vh;
-    }
-    #logo {
-        width: 12vh;
-        height: 12vh;
-        margin-top: 2vh;
-        margin-left: 2vh;
-        margin-right: 2vh;
-    }
-    #title {
-        margin-top: 2vh;
-        max-height: 12vh;
-    }
-    #small-title {
-        margin-top: 2vh;
-        max-height: 8vh;
-    }
-    #search {
-        height: 4vh;
-        margin-top: 2.5vh;
-        margin-right: 3vh;
-    }
-    #help {
-        height: 4.4vh;
-        margin-top: 2.35vh;
-        margin-right: 3vh;
     }
 }
 
@@ -242,53 +192,33 @@ img.small {
     border-radius: 20px;
 }
 
-@media (orientation: portrait) {
-    #small-logo {
-        width: 10vw;
-        margin-top: 1vw;
-        margin-left: 1vw;
-        margin-right: 2vw;
-    }
-    h1 {
-        font-size: 8vw;
-    }
-    .header-left span {
-        margin-top: 1vw;
-    }
-    img.small {
-        width: 40vw;
-        /* reaches max of 200 at width 500 */
-    }
-    .name {
-        width: 40vw;
-    }
+#small-logo {
+    width: 10vmin;
+    margin-top: 1vmin;
+    margin-left: 1vmin;
+    margin-right: 2vmin;
+}
+
+h1 {
+    font-size: 8vmin;
+}
+
+.header-left span {
+    margin-top: 1vmin;
+}
+
+img.small {
+    width: 40vmin;
+    /* reaches max of 200 at width 500 */
+}
+
+.name {
+    width: 40vmin;
 }
 
 @media (min-width: 600px) and (orientation: portrait) {
     h1 {
         font-size: 48px;
-    }
-}
-
-@media (orientation: landscape) {
-    #small-logo {
-        width: 10vh;
-        margin-top: 1vh;
-        margin-left: 1vh;
-        margin-right: 2vh;
-    }
-    h1 {
-        font-size: 8vh;
-    }
-    .header-left span {
-        margin-top: 1vh;
-    }
-    img.small {
-        width: 40vh;
-        /* reaches max of 200 at height 500 */
-    }
-    .name {
-        width: 40vh;
     }
 }
 
@@ -299,6 +229,7 @@ img.small {
 }
 
 .name {
+    font-size: 3.6vmin;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top: 10px;
@@ -306,21 +237,9 @@ img.small {
     /* same as .small */
 }
 
-@media (orientation: portrait) {
-    .name {
-        font-size: 3.6vw;
-    }
-}
-
 @media (min-width: 500px) and (orientation: portrait) {
     .name {
         font-size: 18px;
-    }
-}
-
-@media (orientation: landscape) {
-    .name {
-        font-size: 3.6vh;
     }
 }
 
@@ -367,10 +286,12 @@ img.large {
 
 #close {
     float: right;
+    width: 3.5vmin;
     min-width: 25px;
     max-width: 40px;
-    margin-left: 1vw;
-    margin-right: 2vw;
+    margin-top: 2vmin;
+    margin-left: 1vmin;
+    margin-right: 2vmin;
 }
 
 #close:hover {
@@ -388,10 +309,6 @@ img.large {
     .content {
         width: 45vw;
     }
-    #close {
-        width: 3.5vh;
-        margin-top: 2vh;
-    }
 }
 
 @media (orientation: portrait) {
@@ -403,10 +320,6 @@ img.large {
     }
     .content {
         width: 95vw;
-        margin-top: 2vw;
-    }
-    #close {
-        width: 3.5vw;
         margin-top: 2vw;
     }
 }
