--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,10 +7,8 @@
 
 <body>
     <div class="header">
-        <a href="/help.html">
-            <image id="help" src="images/help.svg" /></a>
-        <a href="/search.html">
-            <image id="search" src="images/search.svg" /></a>
+        {{ partial "helpbutton.html" . }}
+        {{ partial "searchbutton.html" . }}
         <div class="header-left">
             <image id="logo" src="images/naturecompanion.svg" />
             <image id="title" src="images/title.svg" />
