--- a/layouts/_default/birds.html
+++ b/layouts/_default/birds.html
@@ -7,21 +7,22 @@
 
 <body>
     <div class="header">
+        {{ partial "closebutton.html" . }}
+        {{ partial "helpbutton.html" . }}
+        {{ partial "searchbutton.html" . }}
         <h1>
-            <a href="/help.html"><image id="help" src="images/help.svg" /></a>
-            <a href="/"><image id="search" src="images/search.svg" /></a>
             <div class="header-left">
                 <a href="/">
                     <img id="small-logo" src="images/naturecompanion.svg" /></a>
-                    <span>Birds</span>
+                <span>Birds</span>
             </div>
         </h1>
     </div>
 
     <div class="list">
-        {{ range $.Site.Pages }}
-            {{ if isset .Params "name" }}
-            {{if eq .Section "birds"}}
+    {{ range $.Site.Pages }}
+        {{ if isset .Params "name" }}
+            {{ if eq .Section "birds" }}
             <div class="item">
                 <a href="{{ .Section }}/{{ .File.BaseFileName }}.html">
                     <img class="small" 
@@ -30,9 +31,10 @@
                 </a>
             </div>
             {{ end }}
-            {{ end }}
         {{ end }}
+    {{ end }}
     </div>
 
 </body>
+
 </html>
