--- a/layouts/_default/insects.html
+++ b/layouts/_default/insects.html
@@ -7,13 +7,10 @@
 
 <body>
     <div class="header">
+        {{ partial "closebutton.html" . }}
+        {{ partial "helpbutton.html" . }}
+        {{ partial "searchbutton.html" . }}
         <h1>
-            <a href="/help.html">
-                <image id="help" src="images/help.svg" />
-            </a>
-            <a href="/">
-                <image id="search" src="images/search.svg" />
-            </a>
             <div class="header-left">
                 <a href="/">
                     <img id="small-logo" src="images/naturecompanion.svg" />
@@ -24,14 +21,19 @@
     </div>
 
     <div class="list">
-        {{ range $.Site.Pages }} {{ if isset .Params "name" }} {{if eq .Section "insects"}}
-        <div class="item">
-            <a href="{{ .Section }}/{{ .File.BaseFileName }}.html">
-                <img class="small" src="photos/{{ .Section }}/small/{{ .File.BaseFileName }}.jpg" />
-                <div class="name">{{ .Params.name }}</div>
-            </a>
-        </div>
-        {{ end }} {{ end }} {{ end }}
+    {{ range $.Site.Pages }} 
+        {{ if isset .Params "name" }} 
+            {{if eq .Section "insects"}}
+            <div class="item">
+                <a href="{{ .Section }}/{{ .File.BaseFileName }}.html">
+                    <img class="small" 
+                        src="photos/{{ .Section }}/small/{{ .File.BaseFileName }}.jpg" />
+                    <div class="name">{{ .Params.name }}</div>
+                </a>
+            </div>
+            {{ end }} 
+        {{ end }} 
+    {{ end }}
     </div>
 
 </body>
