--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,11 +15,11 @@
 <body>
     <div class="header">
         <h1>
-            <image id="close" src="/images/close.svg" onclick="history.back()" />
-            <div class="header-left">
-                <a href="/"><image id="small-logo" src="/images/naturecompanion.svg" /></a>
-                <span>{{ .Params.name }}</span>
-            </div>
+        <image id="close" src="/images/close.svg" onClick="history.back()" title="close and go back" />
+        <div class="header-left">
+            <a href="/"><image id="small-logo" src="/images/naturecompanion.svg" /></a>
+            <span>{{ .Params.name }}</span>
+        </div>
         </h1>
     </div>
             
