--- a/_includes/type.html
+++ b/_includes/type.html
@@ -14,7 +14,7 @@
             <div class="header-left">
                 <a href="/">
                     <img id="small-logo" src="/images/naturecompanion.svg" /></a>
-                <span>{{heading}}</span>
+                <span>{{title}}</span>
             </div>
         </h1>
     </div>
