--- a/_includes/head.html.mustache
+++ b/_includes/head.html.mustache
@@ -11,4 +11,4 @@
 <link rel="manifest" href="/manifest.json">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#53bf6b">
 <meta name="theme-color" content="#ffffff">
-<title>{{ title }}</title>
+<title>{{#title}}{{.}} - {{/title}}Nature Companion</title>
