--- a/_includes/single.html
+++ b/_includes/single.html
@@ -45,7 +45,7 @@ wetland: function() { return -1 != this.habitat.indexOf("wetland") }
             <div class="attribution">
                 {{#attr}}
                 <a href="{{ attr_link }}" target="_blank">photo</a> by {{ attr }}
-                / <a href="{{ license_link }}" target="_blank">{{ license }}</a>
+                <a href="{{ license_link }}" target="_blank">{{ license }}</a>
                 {{/attr}}
             </div>
         </div>
