--- a/_includes/single.html
+++ b/_includes/single.html
@@ -82,7 +82,7 @@ akas: function() { return this.aka ? this.aka.join(", ") : false }
             {{> desert.svg }}
             <div class="popup" id="desert_def">
                 <span><b>Deserts</b> are dry areas covered with sand or rocks and with very 
-                    few plants. There is limited rainfall and it’s usually very hot.</span>
+                    few plants. There is limited rainfall and it's usually very hot.</span>
             </div>
         </div>
         {{/desert}}
