--- a/_includes/single.html
+++ b/_includes/single.html
@@ -35,7 +35,9 @@ akas: function() { return this.aka ? this.aka.join(", ") : false }
         <h1>
         {{> closebutton.html }}
         <div class="header-left">
-            <a href="/"><image id="small-logo" src="/images/naturecompanion.svg" /></a>
+            <a href="/{{ section }}">
+                <image id="small-logo" src="/images/{{ section }}.svg" />
+            </a>
             <span>{{ name }}</span>
         </div>
         </h1>
