--- a/nature.css
+++ b/nature.css
@@ -26,6 +26,14 @@ html, body {
     background-size: cover;
 }
 
+.install {
+    text-align: center;
+    font-size: 150%;
+    font-family: sans-serif;
+    color: white;
+    display: none; /* initially hidden */
+}
+
 .header {
     background: rgba(0, 0, 0, .3);
     box-shadow: 0 0 1.5vmin 1.5vmin rgba(0, 0, 0, .3);
